--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxtjs/axios": "^5.11.0",
     "nuxt": "^2.13.0",
     "v-lazy-image": "^1.4.0",
-    "vue-mq": "^1.0.1"
+    "vue-mq": "^1.0.1",
+    "vue-scrollto": "^2.18.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
