--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxt/content": "^1.3.2",
     "@nuxtjs/axios": "^5.11.0",
     "nuxt": "^2.13.0",
     "v-lazy-image": "^1.4.0",
@@ -22,6 +21,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/google-analytics": "^2.3.0",
     "@nuxtjs/tailwindcss": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.2.0",
